--- a/mysite/templates/projects.html
+++ b/mysite/templates/projects.html
@@ -11,7 +11,7 @@
         <img src="{% static 'img/ddicon.jpg' %}" width="30px" onClick="projectDropDownToggle('website', this)">
         <h2>This Website</h2>
         <div id="website" class="projects-dd">
-          <p>I enjoy building websites. After messing around for a bit with Wordpress I decided to reconstruct my website using Django, a webframe work in Python. For the front end I have not used any libraries of HTML, CSS or Javascript. I decided to go vanilla to get a better understanding of the languages. This text is a test to see if GitHub is working.</p>
+          <p>I enjoy building websites. After messing around for a bit with Wordpress I decided to reconstruct my website using Django, a webframe work in Python. For the front end I have not used any libraries of HTML, CSS or Javascript. I decided to go vanilla to get a better understanding of the languages.</p>
         </div>
       </div>
 
