--- a/PW/templates/PW/memory.html
+++ b/PW/templates/PW/memory.html
@@ -67,7 +67,7 @@
                 <td>{{ score.name }}</td>
                 <td>{{ score.score }}</td>
                 <td class="highscore-small">{{ score.turns }}</td>
-                <td class="highscore-small">{{ score.time }}</td>
+                <td class="highscore-small">{{ score.totalTime }}</td>
                 <td class="highscore-small">{{ score.date }}</td>
             </tr>
           {% endfor %}
