--- a/groceries/templates/groceries/recipe-edit.html
+++ b/groceries/templates/groceries/recipe-edit.html
@@ -5,11 +5,42 @@
 <div class="recipe">
 
   <form>
-    {{ form.as_p }}
+
+    <div class="recipeForm">
+      {{ recipeForm.as_p }}
+    </div>
+
+    <div id="ingredientForm">
+      {{ ingredientFormSet.management_form }}
+      {% for form in ingredientFormSet %}
+      <div class="ingredientForm">
+        {{ form.as_p }}
+      </div>
+      {% endfor %}
+    </div>
+      <input type="button" value="Add More" id="add_more_ingredients" onclick=addForm("ingredient")>
+
+
+    <div id="tagForm">
+      {{ tagFormSet.management_form }}
+      {% for form in tagFormSet %}
+      <div class="tagForm" >
+        {{ form.as_p }}
+      </div>
+      {% endfor %}
+    </div>
+      <input type="button" value="Add More" id="add_more_tags" onclick=addForm("tag")>
+
   </form>
 
 </div>
 
+<div id="empty_ingredientform" class="emtpy-form">
+  {{ ingredientFormSet.empty_form.as_p }}
+</div>
 
+<div id="emtpy_tagform" class="emtpy-form">
+  {{ tagFormSet.empty_form.as_p }}
+</div>
 
 {% endblock content %}
