--- a/PW/static/PW/css/memory.css
+++ b/PW/static/PW/css/memory.css
@@ -61,7 +61,7 @@ canvas {
       width: 80px;
       height: 80px;
       border: 4px solid black;
-      border-radius 15px;
+      border-radius: 15px;
   }
 
   .countdown {
