--- a/PW/templates/PW/encryption.html
+++ b/PW/templates/PW/encryption.html
@@ -46,6 +46,8 @@
       <button class="button" type="submit" name="button">Submit</button>
     </form>
 
+    <a href="{% url 'PW:home' %}">Go to Bob's website</a>
+
   </body>
 
 </html>
