--- a/PW/templates/PW/projects.html
+++ b/PW/templates/PW/projects.html
@@ -12,6 +12,9 @@
         <h2>This Website</h2>
         <div id="website" class="projects-dd">
           <p>I enjoy building websites. After messing around for a bit with Wordpress I decided to reconstruct my website using Django, a webframe work in Python. For the front end I have not used any libraries of HTML, CSS or Javascript. I decided to go vanilla to get a better understanding of the languages.</p>
+          <h3>Encryption</h3>
+          <p>I build an encryption and decryption tool. It is interesting to think about heuristics for finding the best solution.</p>
+          <a href="{% url 'PW:encryption' %}">Go</a>
         </div>
       </div>
 
