--- a/PW/templates/PW/about.html
+++ b/PW/templates/PW/about.html
@@ -26,7 +26,7 @@
       <img src="{% static 'PW/img/infographic/baby-stroller.png' %}"></br><p>April 17th, 1993</br>Elst, The Netherlands</p></br>
     </div>
     <div class="intro-right">
-      <img src="{% static 'PW/img/infographic/envelope.png' %}"></br><p>bob.luursema@outlook.com</p></br>
+      <img src="{% static 'PW/img/infographic/envelope.png' %}"></br><p>Get in touch (not implemented)</p></br>
       <img src="{% static 'PW/img/infographic/home.png' %}"></br><p>Rotterdam, The Netherlands</p></br>
       <img src="{% static 'PW/img/infographic/website.png' %}"></br><p>www.bob-luursema.nl</p></br>
     </div>
@@ -123,40 +123,4 @@
   </div>
 
 </div>
-
-
-
-
-
-
-<div class="about-div hidden">
-  <h2 class="about-heading">Career path</h2>
-  <ul class="about-list">
-    <li><b>Laboratory Research:</b> science is cool.</li>
-    <li><b>EH Christian Gap Year:</b> getting to know myself.</li>
-    <li><b>Public Administration:</b> helping society analyze complex problems.</li>
-    <li><b>Shelter Christian Hostels:</b> most awesome place on earth to work.</li>
-    <li><b>IT traineeship:</b> people were too complex, computers are more consistent.</li>
-  </ul>
-</div>
-
-<div class="about-div hidden">
-  <h2 class="about-heading">Hobbies</h2>
-  <ul class="about-list">
-    <li><b>Music:</b> playing guitar, piano and cajon.</li>
-    <li><b>Learning new things:</b> solving Rubik's cubes and juggling.</li>
-    <li><b>Killing time:</b> gaming, reading random Wikipedia articles, more making of music.</li>
-  </ul>
-</div>
-
-<div class="about-div hidden">
-  <h2 class="about-heading">Media consumption</h2>
-  <ul class="about-list">
-    <li><b>Spotify:</b> from Frozen soundtrack to Theocracy</li>
-    <li><b>Netflix:</b> from Inside Out to Black Mirror</li>
-    <li><b>Podcasts:</b> from Freakonomics to Hello Internet</li>
-    <li><b>YouTube:</b> from LinusTechTips to Vsauce</li>
-  </ul>
-</div>
-
 {% endblock content %}
