--- a/groceries/templates/groceries/recipe.html
+++ b/groceries/templates/groceries/recipe.html
@@ -7,8 +7,8 @@
   <h2 id="name">{{ recipe.name }}</h2>
 
   <ul>
-    {% for i in ingredients %}
-    <li>{{ i.amount }} {{ i.ingredient.unit }} {{ i.ingredient.name }}</li>
+    {% for i in items %}
+    <li>{{ i.description }}</li>
     {% endfor %}
   </ul>
 
@@ -16,11 +16,8 @@
 
   <div class="recipe-bottom">
     <button name="edit" type="button" class='edit-recipe' onclick=startEdit()>Edit</button>
-    <p class="tags"><b>Tags: </b>{% for t in recipe.tags.all %}{{ t.name }} {% endfor %}</p>
   </div>
 
 </div>
-
-
 
 {% endblock content %}
