--- a/groceries/templates/groceries/recipe-edit.html
+++ b/groceries/templates/groceries/recipe-edit.html
@@ -18,6 +18,7 @@
       {% for form in itemFormSet %}
         <tr>
           <td>{{ form.description }}</td>
+          <td>{{ form.id }}</td>
         </tr>
       {% endfor %}
       </table>
@@ -31,6 +32,7 @@
 <table>
   <tr id="empty_itemform" class="emtpy-form">
     <td>{{ itemFormSet.empty_form.description }}</td>
+    <td>{{ itemFormSet.empty_form.form.id }}</td>
   </tr>
 </table>
 
