--- a/groceries/templates/groceries/recipe-edit.html
+++ b/groceries/templates/groceries/recipe-edit.html
@@ -19,6 +19,7 @@
         <tr>
           <td>{{ form.description }}</td>
           <td>{{ form.id }}</td>
+          <td>{{ form.DELETE }}</td>
         </tr>
       {% endfor %}
       </table>
