--- a/groceries/templates/groceries/recipe.html
+++ b/groceries/templates/groceries/recipe.html
@@ -1,5 +1,7 @@
 {% extends "groceries/base.html" %}
 
+{% block header %}<a class="prev" href="{% url 'groceries:recipes' %}">&#10094;</a> Recipe{% endblock %}
+
 {% block content %}
 
 <div class="recipe">
