--- a/groceries/static/groceries/css/groceries.css
+++ b/groceries/static/groceries/css/groceries.css
@@ -2,6 +2,9 @@ body {
   margin: 0;
   font-family: sans-serif;
 }
+.hidden {
+  display: none;
+}
 
 .container {
   width: 95%;
@@ -17,6 +20,11 @@ header > h1 {
   padding: 15px;
   display: inline-block;
   margin: 0;
+}
+
+header a {
+  text-decoration: none;
+  color: white;
 }
 
 .dropdown {
@@ -149,9 +157,140 @@ header > h1 {
 
 /* ------- RECIPE EDIT PAGE ------- */
 
+.recipe-edit h2 {
+  margin-bottom: 5px;
+}
+
+.recipeForm, #itemForm {
+  border: 3px solid darkorange;
+  padding: 5px 10px;
+  margin-bottom: 20px;
+}
+.recipeForm > p {
+  margin: 5px 0;
+}
+label[for="id_recipe-name"] {
+  font-size: 0.9em;
+}
+#id_recipe-name {
+  width: 100%;
+  font-size: 1.2em;
+}
+label[for="id_recipe-howto"] {
+  font-size: 0.9em;
+}
+#id_recipe-howto {
+  width: 100%;
+  font-family: sans-serif;
+}
+
+.itemForm {
+  width: 100%;
+}
+.itemForm input {
+  width: 100%;
+}
+.item-add-button {
+  position: relative;
+  left: 75%;
+  padding: 5px 10px;
+}
+
+.recipe-save-button {
+  padding: 5px 10px;
+}
+.recipe-delete-button {
+  color: red;
+  font-weight: bold;
+  background:none;
+  border:none;
+  float: right;
+  padding: 5px;
+}
 
 .emtpy-form {
   display: none;
+}
+
+
+/* ------- MAKE GROCERY LIST PAGE -------*/
+
+
+.mgl-cont h2 {
+  margin: 20px 0 0 0;
+}
+.mgl-cont h3 {
+  margin: 10px 0;
+}
+
+.list-recipes {
+  margin: 5px 0;
+  padding: 0;
+  list-style: none;
+}
+.list-recipes li {
+  background-color: blue;
+  border-radius: 5px;
+  display: block;
+  color: white;
+  padding: 10px;
+  margin: 5px;
+}
+.list-recipes-form {
+  margin: 5px 0;
+}
+.list-recipes-form ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+.list-recipes-form li {
+  background-color: darkorange;
+  border-radius: 5px;
+  display: block;
+  color: white;
+  padding: 10px;
+  margin: 5px;
+}
+
+.extra-items {
+  margin: 5px 0;
+  list-style: none;
+  padding: 0;
+}
+.extra-items li {
+  background-color: blue;
+  border-radius: 5px;
+  display: block;
+  color: white;
+  padding: 10px;
+  margin: 5px;
+}
+.extra-items-form {
+  margin: 5px 0;
+}
+.extra-items-form button {
+  background-color: darkgreen;
+  color: white;
+  font-weight: bold;
+  padding: 5px 10px;
+  border: none;
+}
+.extra-items-form input {
+  margin-left: 5px;
+}
+
+.list-save-button {
+  position: fixed;
+  right: 10px;
+  bottom: 10px;
+  padding: 5px 10px;
+  border: none;
+  background-color: blue;
+  color: white;
+  border-radius: 5px;
+  font-size: 1.2em;
+  border: 3px solid darkorange;
 }
 
 
