--- a/scrum/templates/scrum/product_backlog.html
+++ b/scrum/templates/scrum/product_backlog.html
@@ -39,18 +39,16 @@
         {% for epic, uss in us_epic.items %}
         <table class="epic-table">
           <tr>
-            <th colspan="3">{{ epic.name }}</th>
+            <th class="epic-th" colspan="3">{{ epic.name }}</th>
           </tr>
           <tr>
             <th>Name</th>
             <th>Description</th>
-            <th>Prio</th>
           </tr>
           {% for us in uss %}
           <tr>
             <td>{{ us.name }}</td>
             <td>{{ us.description }}</td>
-            <td>{{ us.priority }}</td>
           </tr>
           {% endfor %}
         {% endfor %}
