--- a/groceries/templates/groceries/make-grocery-list.html
+++ b/groceries/templates/groceries/make-grocery-list.html
@@ -19,7 +19,7 @@
         <li id="recipe{{ recipe.id }}" onclick=toggleRecipe("{{ recipe.id }}")>{{ recipe.name }}</li>
       {% endfor %}
     </ul>
-    <input id="recipes_data" class="hidden" name="recipes" type="text">
+    <input id="recipes-data" class="hidden" name="recipes" type="text">
     <input class="list-save-button" type="submit" value="Save list">
   </form>
 
