--- a/groceries/templates/groceries/base.html
+++ b/groceries/templates/groceries/base.html
@@ -5,7 +5,7 @@
 		<script src="{% static 'groceries/js/groceries.js' %}"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% block head %}{% endblock head %}
-    <title>{% block title %} | Groceries{% endblock title%}</title>
+    <title>{% block title %}Groceries{% endblock title%}</title>
 	</head>
 
 	<body>
