--- a/groceries/templates/groceries/make-grocery-list.html
+++ b/groceries/templates/groceries/make-grocery-list.html
@@ -1,5 +1,7 @@
 {% extends "groceries/base.html" %}
 
+{% block title %}Make List | {{ block.super }}{% endblock %}
+
 {% load static %}
 
 {% block head %}
