--- a/groceries/static/groceries/css/groceries.css
+++ b/groceries/static/groceries/css/groceries.css
@@ -127,6 +127,30 @@ header a {
   display: block;
 }
 
+.import-form {
+  position: fixed;
+  border: 4px solid darkgreen;
+  background-color: white;
+  border-radius: 10px;
+  padding: 20px;
+  top: 20%;
+  left: 10%;
+  box-shadow: 0 5px 25px 0 black;
+}
+.import-form * {
+  display: block;
+}
+.import-form h2 {
+  margin: 0;
+  padding-bottom: 10px;
+}
+.import-form input {
+  margin-bottom: 10px;
+}
+.import-form button {
+  float: right;
+}
+
 
 /* ------- RECIPE PAGE ------- */
 
